tests/paczka1/small_fuzzy/17405373.err
Error in line 4: A458 S524 54,3
Error in line 5: HXz6D64P S49 57,2
Error in line 3: 6rI0oAq0w S524 75,0
